チームメンバーに自分のサーバーにアクセスしてもらえた

--- a/memo/サーバー起動停止方法.md
+++ b/memo/サーバー起動停止方法.md
@@ -1,8 +1,16 @@
 起動
 cd src
 npm start
+open http://localhost:3000 on chrome
+
 
 停止
 サーバーが動いているターミナルで
 Ctrl+C
+
+
+他の人に自分のサーバーにアクセスしてもらいたいときは
+AIに
+いまlocalhostにアクセスしているが、自分のPCのIPアドレスにチームメンバーにアクセスしてもらいたい。その場合のURLをつくってほしい。
+ときく
 
